--- a/source/META-INF/plugin.xml
+++ b/source/META-INF/plugin.xml
@@ -30,9 +30,9 @@
     
   <extensions defaultExtensionNs="com.intellij">
     <!-- Add your extensions here -->
-      <configurationType implementation="karl.gong.ptest.PythonPTestConfigurationType" order="FIRST"/>
-      <runConfigurationProducer implementation="karl.gong.ptest.PythonPTestConfigurationProducer" order="FIRST"/>
-      <inspectionToolProvider implementation="karl.gong.ptest.PTestRedeclarationProvider"/>
+      <configurationType implementation="karl.gong.ptest.runconfiguration.PTestConfigurationType" order="FIRST"/>
+      <runConfigurationProducer implementation="karl.gong.ptest.runconfiguration.PTestConfigurationProducer" order="FIRST"/>
+      <inspectionToolProvider implementation="karl.gong.ptest.inspection.PTestRedeclarationProvider"/>
   </extensions>
 
   <application-components>
