--- a/source/META-INF/plugin.xml
+++ b/source/META-INF/plugin.xml
@@ -1,7 +1,7 @@
-<idea-plugin version="2">
+<idea-plugin version="3">
   <id>karl.gong.plugin.ptest</id>
   <name>ptest</name>
-  <version>2.0</version>
+  <version>3.0</version>
   <vendor email="karl.gong@outlook.com" url="https://github.com/KarlGong">Karl Gong</vendor>
 
   <description><![CDATA[
@@ -10,6 +10,10 @@
     ]]></description>
 
   <change-notes><![CDATA[
+      <p>3.0</p>
+      <ul>
+      <li>Support inspecting redeclared decorated names.</li>
+      </ul>
       <p>2.0</p>
       <ul>
       <li>Support rerunning the failed/skipped tests in last run.</li>
