--- a/source/META-INF/plugin.xml
+++ b/source/META-INF/plugin.xml
@@ -1,7 +1,7 @@
 <idea-plugin version="2">
   <id>karl.gong.plugin.ptest</id>
   <name>ptest</name>
-  <version>3.2</version>
+  <version>3.3</version>
   <vendor email="karl.gong@outlook.com" url="https://github.com/KarlGong">Karl Gong</vendor>
 
   <description><![CDATA[
@@ -10,6 +10,10 @@
     ]]></description>
 
   <change-notes><![CDATA[
+      <p>3.3</p>
+      <ul>
+      <li>Support group in run/debug panel.</li>
+      </ul>
       <p>3.2</p>
       <ul>
       <li>Support ptest 1.4.</li>
