--- a/source/META-INF/plugin.xml
+++ b/source/META-INF/plugin.xml
@@ -1,7 +1,7 @@
 <idea-plugin version="2">
   <id>karl.gong.plugin.ptest</id>
   <name>ptest</name>
-  <version>3.8</version>
+  <version>3.9</version>
   <vendor email="karl.gong@outlook.com" url="https://github.com/KarlGong">Karl Gong</vendor>
 
   <description><![CDATA[
@@ -10,6 +10,10 @@
     ]]></description>
 
   <change-notes><![CDATA[
+        <p>3.9</p>
+        <ul>
+        <li>Fix no ptest menu shown when right click a class which inherit @TestClass.</li>
+        </ul>
         <p>3.8</p>
         <ul>
         <li>Fix no ptest menu shown when right click dict.</li>
