reorginize the structure.

--- a/resources/META-INF/plugin.xml
+++ b/resources/META-INF/plugin.xml
@@ -46,6 +46,7 @@
       <runConfigurationProducer implementation="com.iselsoft.ptest.runConfiguration.PTestConfigurationProducer" order="FIRST"/>
       <inspectionToolProvider implementation="com.iselsoft.ptest.inspection.PTestRedeclarationProvider"/>
       <runLineMarkerContributor implementationClass="com.iselsoft.ptest.runLineMarker.PTestRunLineMarkerContributor" language="Python"/>
+      <toolWindow id="PTest View" factoryClass="com.intellij.ide.structureView.impl.StructureViewToolWindowFactory" anchor="right" />
   </extensions>
 
   <application-components>
