--- a/resources/META-INF/plugin.xml
+++ b/resources/META-INF/plugin.xml
@@ -1,7 +1,7 @@
 <idea-plugin version="2">
   <id>karl.gong.plugin.ptest</id>
   <name>ptest</name>
-  <version>4.3</version>
+  <version>5.0</version>
   <vendor email="karl.gong@outlook.com" url="https://github.com/KarlGong">Karl Gong</vendor>
 
   <description><![CDATA[
@@ -10,12 +10,13 @@
     ]]></description>
 
   <change-notes><![CDATA[
-      <p>4.3</p>
+      <p>5.0</p>
+      <ul>
+        <li>Add tool window - PTest View.</li>
+      </ul>
+      <p>1.0 - 4.3</p>
       <ul>
         <li>Fix bug: group in run/debug panel is missed.</li>
-      </ul>
-      <p>1.0 - 4.2</p>
-      <ul>
         <li>Fix bug in pycharm 2016.2.2</li>
         <li>Support right click data provided test case in run/debug panel.</li>
         <li>Add gutter marker for test and test class of ptest.</li>
@@ -33,7 +34,7 @@
     ]]>
   </change-notes>
 
-  <!-- please see http://confluence.jetbrains.com/display/IDEADEV/Build+Number+Ranges for description -->
+  <!-- please see http://www.jetbrains.org/intellij/sdk/docs/basics/getting_started/build_number_ranges.html for description -->
   <idea-version since-build="145"/>
 
   <!-- please see http://confluence.jetbrains.com/display/IDEADEV/Plugin+Compatibility+with+IntelliJ+Platform+Products
