--- a/src/resources/META-INF/plugin.xml
+++ b/src/resources/META-INF/plugin.xml
@@ -1,5 +1,5 @@
 <idea-plugin>
-  <id>com.iselsoft.plugin.ptest</id>
+  <id>karl.gong.plugin.ptest</id>
   <name>ptest</name>
   <version>5.2</version>
   <vendor email="karl.gong@outlook.com" url="https://github.com/KarlGong">Karl Gong</vendor>
