--- a/src/resources/META-INF/plugin.xml
+++ b/src/resources/META-INF/plugin.xml
@@ -47,11 +47,11 @@
     
   <extensions defaultExtensionNs="com.intellij">
     <!-- Add your extensions here -->
-    <configurationType implementation="com.iselsoft.ptest.runConfiguration.PTestConfigurationType" order="FIRST"/>
-    <runConfigurationProducer implementation="com.iselsoft.ptest.runConfiguration.PTestConfigurationProducer" order="FIRST"/>
-    <inspectionToolProvider implementation="com.iselsoft.ptest.inspection.PTestRedeclarationProvider"/>
-    <runLineMarkerContributor implementationClass="com.iselsoft.ptest.runLineMarker.PTestRunLineMarkerContributor" language="Python"/>
-    <toolWindow id="PTest View" factoryClass="com.iselsoft.ptest.toolWindow.PTestViewToolWindowFactory" anchor="right" icon="/icons/com/jetbrains/python/pythonTests.png"/>
+    <configurationType implementation="com.github.ptest.runConfiguration.PTestConfigurationType" order="FIRST"/>
+    <runConfigurationProducer implementation="com.github.ptest.runConfiguration.PTestConfigurationProducer" order="FIRST"/>
+    <inspectionToolProvider implementation="com.github.ptest.inspection.PTestRedeclarationProvider"/>
+    <runLineMarkerContributor implementationClass="com.github.ptest.runLineMarker.PTestRunLineMarkerContributor" language="Python"/>
+    <toolWindow id="PTest View" factoryClass="com.github.ptest.toolWindow.PTestViewToolWindowFactory" anchor="right" icon="/icons/com/jetbrains/python/pythonTests.png"/>
   </extensions>
 
   <application-components>
