--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,16 @@
-*.class
+# IntelliJ
+/.idea
+*.iml
 
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
+# Downloaded plugin dependencies
+/lib
 
-# Package Files #
-*.jar
-*.war
-*.ear
+# Generated sources
+/src/main/java-gen
 
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
+# Gradle
+/.gradle
+/build
 
-# idea
-.idea/
-
-# out
-out/
+#Mac
+.DS_store
